# gemini_cli_bridge

./: .gitignore  .mailmap  CHANGELOG.md  README.md  README.zh-CN.md  gemini_cli_bridge.py  pyproject.toml
.github/workflows/: publish-pypi.yml
